--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,6 @@
 <footer>
-    <div>
-        <h3> Footer 부분입니다.</h3>
+    <div class="footer_box">
+        <p class="footer_header">꿀트렌드</p>
+        <p>Copyrightⓒ 2021. 아기돼지삼형제. All rights reserved.</p>
     </div>
 </footer>
