--- a/templates/index/data.html
+++ b/templates/index/data.html
@@ -8,32 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </head>
-<<<<<<< HEAD
-<body>
 
-<!--상단 nav-->
-<nav class="navbar navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a href="{% url 'index:search'%}">꿀트렌드</a>
-        </div>
-        <div class="nav_menu">
-            <a href="{% url 'index:ranking'%}">랭킹</a>
-        </div>
-        <!--검색창-->
-        <form id="searchForm" method="get" action="{% url 'index:data' %}">
-            <input type="text" id="kw" name="kw" autocomplete="off" placeholder="옷 종류를 입력하세요."/>
-            <ul class="output" style="display:none;">
-            </ul>
-            <button type="submit" id="submit" style="background-color:transparent;"><i class="fa fa-search"
-                                                                                       style="color : white;"></i>
-            </button>
-        </form>
-    </div>
-</nav>
-=======
-<!--상단 nav-->
->>>>>>> 5fb80d2921b501d92380ed6dc21395bf400693c1
+<body>
 <div class="result-navbar">
     <div class="result-container">
         <h2 class="header">{{keyword}}에 대한 검색 결과입니다.</h2>
@@ -55,7 +31,7 @@
 
     <!--패션지수 그래프-->
     <div class="row">
-        <div class="col-md-10 month_graph">
+        <div class="col-md-11 month_graph">
             <div class="chart">
                 <canvas id="FashionChart" height="100vh" aria-label="Site statistics" role="img"></canvas>
             </div>
@@ -63,100 +39,68 @@
     </div>
 </div>
 
-<div class="container" >
-    <h2 class="main-title">감성어 분석</h2>
+<div class="row">
     <div class="container">
-<<<<<<< HEAD
-        <div class="col-md-8 d3_graph" aria-label="Site statistics">
-            <div>
-            <!--d3 상세정보 버튼-->
-            <div class="d3_detail_box" align="right">
-                <div><a href="javascript:doDisplay();"><i class="fas fa-ellipsis-h"></i></a></div>
-                <div class="d3_data" id="test_div">
-                    <div id="d3_box">
-                        <table>
-                            <thead>
-                            <tr>
-                                <th>랭킹</th>
-                                <th>감성어</th>
-                                <th>언급량</th>
-                                <th>분류</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% if sent_list %}
-                            {% for sent in sent_list %}
-                            <tr class="text-center">
-                                <td>{{ sent.id }}위</td>
-                                <td class="text-center">
-                                    {{ sent.word }}
-                                </td>
-                                <td>{{ sent.value}}</td>
-                                <td>
-                                    {{ sent.group }}
-                                </td>
-                            </tr>
-                            {% endfor %}
-                            {% endif %}
-                            </tbody>
-                        </table>
+        <h2 class="main-title">감성어 분석</h2>
+        <div class="container">
+            <div class="col-md-11 d3_graph" aria-label="Site statistics">
+                <!--d3 상세정보 버튼-->
+                <div class="d3_detail_box" align="right">
+                    <div><a href="javascript:doDisplay();"><i class="fas fa-ellipsis-h"></i></a></div>
+                    <div class="d3_data" id="test_div">
+                        <div id="d3_box">
+                            <table>
+                                <thead>
+                                <tr>
+                                    <th>랭킹</th>
+                                    <th>감성어</th>
+                                    <th>언급량</th>
+                                    <th>분류</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% if sent_list %}
+                                {% for sent in sent_list %}
+                                <tr class="text-center">
+                                    <td>{{ sent.id }}위</td>
+                                    <td class="text-center">
+                                        {{ sent.word }}
+                                    </td>
+                                    <td>{{ sent.value}}</td>
+                                    <td>
+                                        {{ sent.group }}
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                                {% endif %}
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- d3 그래프 삽입 부분-->
+                <div class="d3"></div>
+                <div class="col-md-8 text-center" style="margin:0 auto;">
+                    <div class="three_box">
+                        <div class="column box_cell" id="positive"><i class="far fa-smile-beam"></i> 긍정 {{positive_value}}%</div>
+                        <div class="column box_cell" id="neutral"><i class="far fa-meh-blank"></i> 중립 {{neutral_value}}%</div>
+                        <div class="column box_cell" id="negative"><i class="far fa-frown-open"></i> 부정 {{negative_value}}%</div>
 
                     </div>
                 </div>
             </div>
 
-=======
-        <div class="col-xl-8 col-lg-12 d3 d3_graph">
->>>>>>> 5fb80d2921b501d92380ed6dc21395bf400693c1
-            <!-- d3 그래프 삽입 부분-->
-            <div class="d3"></div>
-                </div>
-            <h2 style="text-align: center;">긍정:{{positive_value}}%, 부정:{{negative_value}}%, 중립:{{neutral_value}}%</h2>
         </div>
-    </div>
-<<<<<<< HEAD
 
-
-=======
-    <h2 style="text-align: center;">긍정:{{positive_value}}%, 부정:{{negative_value}}%, 중립:{{neutral_value}}%</h2>
-    <div class="col-xl-4 col-lg-12 d3_data">
-        <div class="d3_box">
-            <table border="1">
-                <thead>
-                <tr>
-                    <th>랭킹</th>
-                    <th>감성어</th>
-                    <th>언급량</th>
-                    <th>분류</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% if sent_list %}
-                {% for sent in sent_list %}
-                <tr class="text-center">
-                    <td>{{ sent.id }}위</td>
-                    <td class="text-center">
-                        {{ sent.word }}
-                    </td>
-                    <td>{{ sent.value}}</td>
-                    <td>
-                        {{ sent.group }}
-                    </td>
-                </tr>
-                {% endfor %}
-                {% endif %}
-                </tbody>
-            </table>
-        </div>
     </div>
->>>>>>> 5fb80d2921b501d92380ed6dc21395bf400693c1
 </div>
 <!--원분보기-->
 
 <div class="container">
     <h2 class="main-title">원문보기</h2>
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <section class="wrapper">
                 <ul class="tabs" style="background-color:#6796dc;">
                     <li class="active">무신사</li>
@@ -209,12 +153,6 @@
     </div>
 </div>
 
-<footer >
-    <div class="footer_box">
-        <p class="footer_header">꿀트렌드</p>
-        <p>Copyrightⓒ 2021. 아기돼지삼형제. All rights reserved.</p>
-    </div>
-</footer>
 
 </body>
 
@@ -291,6 +229,9 @@
         },
       }
     });
+
+
+
 
 
 
@@ -378,6 +319,9 @@
 
 
 
+
+
+
 </script>
 
 <script>
@@ -447,6 +391,9 @@
 
 
 
+
+
+
 </script>
 
 <script type='text/javascript'>
@@ -456,6 +403,9 @@ $(document).ready(function(){
         $("#searchForm").submit();
     });
 });
+
+
+
 
 
 
@@ -473,6 +423,9 @@ $(document).ready(function(){
             con.style.display='none';
         }
     }
+
+
+
 
 
 
