--- a/templates/index/data.html
+++ b/templates/index/data.html
@@ -152,8 +152,6 @@
         </div>
     </div>
 </div>
-
-
 </body>
 
 {% endblock %}
@@ -230,17 +228,6 @@
       }
     });
 
-
-
-
-
-
-
-
-
-
-
-
 </script>
 
 <!--d3 그래프-->
@@ -250,7 +237,7 @@
             "nodes": [
             {% if sent_list %}
             {% for sent in sent_list %}
-                { "name": "{{sent.name}}", "value": {{sent.value}}, "group": "{{sent.group}}" },
+                { "name": "{{sent.word}}", "value": {{sent.value}}, "group": "{{sent.group}}" },
                 // name: 감성어, value: 감성어의 빈도수, group: 긍정/중립/부정 분류
             {% endfor %}
             {% endif %}
@@ -260,7 +247,7 @@
             height = 490;
 
         var force = d3.layout.force()
-            .charge(-1200)
+            .charge(-600)
             .size([width, height]);
 
         var svg = d3.select("div.d3").append("svg")
@@ -304,24 +291,6 @@
                 return "translate(" + d.x + "," + d.y + ")";
             });
         });
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </script>
 
 <script>
@@ -383,17 +352,6 @@
 	});
 });
 
-
-
-
-
-
-
-
-
-
-
-
 </script>
 
 <script type='text/javascript'>
@@ -403,12 +361,6 @@ $(document).ready(function(){
         $("#searchForm").submit();
     });
 });
-
-
-
-
-
-
 
 </script>
 
@@ -424,11 +376,5 @@ $(document).ready(function(){
         }
     }
 
-
-
-
-
-
 </script>
 {% endblock %}
-
