--- a/templates/index/data.html
+++ b/templates/index/data.html
@@ -21,7 +21,8 @@
     <h2 class="main-title">패션지수</h2>
     <!--입기 좋은 달 추천-->
     <div class="month_data">
-        <div class="month_box col-sm-3 text-center"><span class="iconWrapper"><i class="far fa-calendar-alt fa-lg"></i></span>{{month_1}}월
+        <div class="month_box col-sm-3 text-center">
+            <span class="iconWrapper"><i class="far fa-calendar-alt fa-lg"></i></span>{{month_1}}월
         </div>
         <div class="month_box col-sm-3 text-center"><span class="iconWrapper"><i class="far fa-calendar-alt fa-lg"></i></span>{{month_2}}월
         </div>
