--- a/static/about.css
+++ b/static/about.css
@@ -1,8 +1,14 @@
-body{ background-color: white;}
+body{ background-color: #F3F3F3;;}
 
 @font-face{
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
+}
+
+@font-face{
+ font-family : 'Godo';
+ font-style : normal;
+ src : url('//cdn.jsdelivr.net/korean-webfonts/1/corps/godo/Godo/GodoB.woff2') format('woff2'), url('//cdn.jsdelivr.net/korean-webfonts/1/corps/godo/Godo/GodoB.woff') format('woff');
 }
 
 .navbar{
@@ -56,11 +62,7 @@ i{
   color:#337ab7;
 }
 
-.box{
-  margin-top:30px;
-  box-model: border-box;
-  border: 3px solid transparent;
-}
+
 
 .text-center {
     text-align: center;
@@ -70,12 +72,21 @@ i{
     color: #777;
 }
 
-.title{
-    margin-top: 20px;
-    margin-bottom: 10px;
-    font-size: 30px;
+.main-title{
+  font-size: 35px;
+  font-family: "Godo", sans-serif;
+  color: rgb(50, 50, 50);
+  text-align: center;
+  margin-top:50px;
 }
 
+.sub-title{
+  font-size: 25px;
+  font-family: "Godo", sans-serif;
+  color: rgb(50, 50, 50);
+  text-align: center;
+  margin-top:30px;
+}
 
 h1, h3 {
     margin-top: 20px;
@@ -105,11 +116,30 @@ p {
 #data-text{
   text-align:center;
 }
+
 .row {
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-right: 15px;
+    margin-left: 15px;
 }
 
+.detail_box{
+  padding: 40px 0;
+  background-color: white;
+  border-radius : 15px 15px 15px 15px;
+  margin : 0 auto;
+  box-shadow: 0 .15rem 1.75rem 0 rgba(33,40,50,.15)
+}
+
+.service_box{
+ margin-top:30px;
+}
+
+.rank_box{
+ float:left;
+ width : 20%;
+ display: inline-block;
+ margin-top: 90px;
+}
 .footer_box{
   margin:0 auto; text-align:center;
   width:100%;
