--- a/static/ranking.css
+++ b/static/ranking.css
@@ -78,18 +78,22 @@ margin: 0 auto;
 
 .rank_detail{
   text-align: center;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 1.5;
 }
 
 .rank_graph{
-  padding-top: 80px;
+  padding-top: 50px;
   background-color: white;
   border-radius : 15px 15px 15px 15px;
   margin : 0 auto;
   box-shadow: 0 .15rem 1.75rem 0 rgba(33,40,50,.15)
 }
 
+.rank_img{
+  text-align:center;
+  padding : 30px 0;
+}
 
 .table{
   border-spacing: 0px;
