--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="footer_box">
-        <p class="footer_header">꿀트렌드</p>
+        <p class="footer_header">I'm Trend</p>
         <p>Copyrightⓒ 2021. 아기돼지삼형제. All rights reserved.</p>
     </div>
 </footer>
