--- a/templates/index/about.html
+++ b/templates/index/about.html
@@ -19,96 +19,138 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12 text-center">
-            <h3 class="section-heading-t title">Our Team</h3>
-            <hr class="primary hr-service">
+            <h3 class="section-heading-t main-title">Our Team</h3>
         </div>
     </div>
 
-    <div class="row text-center">
-        <div class="col-sm-4">
-            <div class="team-member">
-                <img src="media/team1.png" class="img-responsive img-circle" alt="" width="50%"
-                     style="display: block; margin: 0 auto;">
-                <h4>엄은지</h4>
-                <p class="text-muted">Project leader</p>
-                <p class="text-muted-m">um0114@gmail.com</p>
+    <div class="detail_box">
+        <div class="row text-center">
+            <div class="col-sm-4">
+                <div class="team-member">
+                    <img src="media/team1.png" class="img-responsive img-circle" alt="" width="50%"
+                         style="display: block; margin: 0 auto;">
+                    <h4><strong>엄은지</strong></h4>
+                    <p class="text-muted">Project leader</p>
+                    <p class="text-muted-m">um0114@gmail.com</p>
 
+                </div>
             </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="team-member">
-                <img src="media/team2.png" class="img-responsive img-circle" alt="" width="50%"
-                     style="display: block; margin: 0 auto;">
-                <h4>정채은</h4>
-                <p class="text-muted">Front-end developer</p>
-                <p class="text-muted-m">yllowrose452@naver.com</p>
+            <div class="col-sm-4">
+                <div class="team-member">
+                    <img src="media/team2.png" class="img-responsive img-circle" alt="" width="50%"
+                         style="display: block; margin: 0 auto;">
+                    <h4><strong>정채은</strong></h4>
+                    <p class="text-muted">Front-end developer</p>
+                    <p class="text-muted-m">yllowrose452@naver.com</p>
 
+                </div>
             </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="team-member">
-                <img src="media/team3.png" class="img-responsive img-circle" alt="" width="50%"
-                     style="display: block; margin: 0 auto;">
-                <h4>오준호</h4>
-                <p class="text-muted">Back-end developer</p>
-                <p class="text-muted-m">quietgong@naver.com</p>
+            <div class="col-sm-4">
+                <div class="team-member">
+                    <img src="media/team3.png" class="img-responsive img-circle" alt="" width="50%"
+                         style="display: block; margin: 0 auto;">
+                    <h4><strong>오준호</strong></h4>
+                    <p class="text-muted">Back-end developer</p>
+                    <p class="text-muted-m">quietgong@naver.com</p>
+                </div>
             </div>
         </div>
     </div>
-
-    <hr class="primary hr-service">
 
 </div>
 <div class=" container">
     <div class="row">
-        <div class=" col-lg-12 col-md-12 text-center">
-            <div class="box service-box">
-                <i class="fa fa-5x fa-line-chart wow bounceIn text-primary"
-                   style="visibility: visible; animation-name: bounceIn;"></i>
+        <div class="col-lg-12 text-center">
+            <h3 class="section-heading-t main-title">개발 기능</h3>
+        </div>
+    </div>
+    <div class="detail_box">
+        <div class="row text-center" style="margin-top:20px;">
+            <div class=" col-lg-12 col-md-12 text-center">
+                <div style="float:left; width : 20%;"><i class="fa fa-5x fa-line-chart wow bounceIn text-primary"
+                                                         style="visibility: visible; animation-name: bounceIn;"></i>
+                    <h4 class="section-heading-t sub-title">패션지수</h4></div>
 
-                <h3 class="title">"패션지수"</h3>
-                <div class="col-lg-12 col-md-12 text-center">
-                    <div class="box service-box">
-                        <p class="text-muted" style="font-size: 1.25em;">
-                            리뷰 작성 날짜를 크롤링하여 작성 날짜 데이터를 그래프로 표현하고, <br>가장 높은 상위 3개의 달(month)을 출력합니다. </p>
-
-                    </div>
-                </div>
-
-                <div class="col-lg-12 col-md-12 text-center">
-                    <i class="fa fa-5x fa-heart wow bounceIn text-primary"
-                       style="visibility: visible; animation-name: bounceIn;"></i>
-
-                    <h3 class="title">"감성어 분석"</h3>
-                    <p class="text-muted" style="font-size: 1.25em;">
-                        리뷰 데이터 중 감성어를 분석하여 긍정, 부정, 중립의 감성어가 <br>차지하는 비율과 가장 많이 언급된 감성어 top10 개를 보여줍니다. </p>
-
+                <div class="service_box" style="float : left; width : 70%;">
+                    <p class="text-muted" style="font-size: 1.3em;"> 리뷰 작성 날짜를 크롤링하여 작성 날짜 데이터를 그래프로 표현하고, <br>가장 높은 상위
+                        3개의 달(month)을 출력합니다. </p>
                 </div>
             </div>
-            <div class="col-lg-12 col-md-12 text-center">
-                <div class="box service-box">
-                    <i class="fa fa-5x fa-thumbs-o-up wow bounceIn text-primary"
-                       style="visibility: visible; animation-name: bounceIn;"></i>
+        </div>
+        <div class="row text-center" style="margin-top:40px;">
+            <div class=" col-lg-12 col-md-12 text-center">
+                <div style="float:left; width : 20%;"><i class="fa fa-5x fa-heart wow bounceIn text-primary"
+                                                         style="visibility: visible; animation-name: bounceIn;"></i>
+                    <h4 class="section-heading-t sub-title">감성어</h4></div>
 
-                    <h3 class="title">"랭킹 분석"</h3>
+                <div class="service_box" style="float : left; width : 70%;">
+                    <p class="text-muted" style="font-size: 1.3em;"> 리뷰 데이터 중 감성어를 분석하여 긍정, 부정, 중립의 감성어가 <br>차지하는 비율과 가장
+                        많이 언급된 감성어 top10 개를 보여줍니다. </p>
+                </div>
+            </div>
+        </div>
+        <div class="row text-center" style="margin-top:20px;">
+            <div class=" col-lg-12 col-md-12 text-center">
+                <div class="rank_box"><i class="fa fa-5x fa-thumbs-o-up wow bounceIn text-primary"
+                          style="visibility: visible; animation-name: bounceIn;"></i>
+                    <h4 class="section-heading-t sub-title">랭킹분석</h4></div>
+
+                <div class="service_box" style="float : left; width : 70%;">
+                    <p class="text-muted" style="font-size: 1.3em;"> 쇼핑몰 사이트의 좋아요 개수와 계절 점수를 통해 데이터 수집 일자 기준으로 <br>사람들에게
+                        가장 주목받는 의류 품목을 랭킹 순으로 보여줍니다. </p>
                     <img src="media/formula.png">
-                    <p class="text-muted" style="font-size: 1.25em;">
-                        쇼핑몰 사이트의 좋아요 개수와 계절 점수를 통해 데이터 수집 일자 기준으로 <br>사람들에게 가장 주목받는 의류 품목을 랭킹 순으로 보여줍니다. </p>
-
                 </div>
             </div>
         </div>
     </div>
-    <hr class="primary hr-service">
+
+</div>
+</div>
+</div>
+</div>
 </div>
 
+<div class="container" style="margin-bottom: 40px;">
+    <div class="row">
+        <div class="col-lg-12 text-center">
+            <h3 class="section-heading-t main-title">Developed by</h3>
+        </div>
+    </div>
 
-<div class="row">
+    <div class="detail_box">
+        <div class="row text-center">
+            <div class="col-sm-3">
+                <img src="media/about1.png" class="img-responsive img-circle" width="50%">
+            </div>
+            <div class="col-sm-3">
+                <img src="media/about2.jpeg" class="img-responsive img-circle" width="50%">
+            </div>
+            <div class="col-sm-3">
+                <img src="media/about3.png" class="img-responsive img-circle" width="50%">
+            </div>
+            <div class="col-sm-3">
+                <img src="media/about4.png" class="img-responsive img-circle" width="20%">
+            </div>
+            <div class="col-sm-3">
+                <img src="media/about5.png" class="img-responsive img-circle" width="60%"
+                     style="margin-top:40px;">
+            </div>
+            <div class="col-sm-3">
+                <img src="media/about6.png" class="img-responsive img-circle" width="30%"
+                     style="margin-top:30px;">
+            </div>
+            <div class="col-sm-3">
+                <img src="media/about7.png" class="img-responsive img-circle" width="23%"
+                     style="margin-top:20px;">
+            </div>
+            <div class="col-sm-3">
+                <img src="media/about8.png" class="img-responsive img-circle" width="23%"
+                     style="margin-top:30px;">
+            </div>
 
-    <div class="col-lg-8 col-lg-offset-2" style="margin:0 auto; display:flex;padding-right:0;">
-        <p class="text-muted" style="text-align:center;  margin : 0 auto; padding:10px 0 20px 0;"><strong>2021 충북대학교
-            소프트웨어학과 졸업작품</strong><br>Developed by
-            / HTML, CSS / D3.js, chart.js / Django Framework</p>
+        </div>
+
+
     </div>
 </div>
 </body>
