--- a/templates/index/data.html
+++ b/templates/index/data.html
@@ -238,7 +238,7 @@
             "nodes": [
             {% if sent_list %}
             {% for sent in sent_list %}
-                { "name": "{{sent.word}}", "value": {{sent.value}}, "group": "{{sent.group}}" },
+                { "name": "{{sent.word}}", "value": {{forloop.revcounter}}, "group": "{{sent.group}}" },
                 // name: 감성어, value: 감성어의 빈도수, group: 긍정/중립/부정 분류
             {% endfor %}
             {% endif %}
@@ -263,7 +263,7 @@
             .data(graph.nodes)
             .enter().append("circle")
             .attr("class", "node")
-            .attr("r", function (d) { return d.value * 2})
+            .attr("r", function (d) { return d.value * 10})
             .style("fill", function (d) {
                 if(d.group == "긍정") // 긍정에 대한 색깔
                     return 'rgb(103, 150, 220)';
@@ -280,7 +280,7 @@
             .attr("class", "label")
             .attr("fill", "white")
             .attr("text-anchor", "middle")
-            .attr("font-size", function(d) { return d.value })
+            .attr("font-size", function(d) { return d.value * 5})
             .text(function (d) { return d.name; });
 
         force.on("tick", function () {
