--- a/templates/index/data.html
+++ b/templates/index/data.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
 <div class="result-navbar">
     <div class="result-container">
         <h2 class="header">{{keyword}}에 대한 검색 결과입니다.</h2>
@@ -20,13 +21,22 @@
     <!--패션지수-->
     <h2 class="main-title">패션지수</h2>
     <!--입기 좋은 달 추천-->
-    <div class="month_data">
+    <div class="month_data" >
         <div class="month_box col-sm-3 text-center">
-            <span class="iconWrapper"><i class="far fa-calendar-alt fa-lg"></i></span>{{month_1}}월
+            <span class="iconWrapper">
+                <i class="far fa-calendar-alt fa-lg"></i></span>
+            <span class="rank_icon"><span>1위</span></span>
+            {{month_1}}월
         </div>
-        <div class="month_box col-sm-3 text-center"><span class="iconWrapper"><i class="far fa-calendar-alt fa-lg"></i></span>{{month_2}}월
+        <div class="month_box col-sm-3 text-center">
+            <span class="iconWrapper"><i class="far fa-calendar-alt fa-lg"></i></span>
+            <div class="rank_icon"><span>2위</span></div>
+            {{month_2}}월
         </div>
-        <div class="month_box col-sm-3 text-center"><span class="iconWrapper"><i class="far fa-calendar-alt fa-lg"></i></span>{{month_3}}월
+        <div class="month_box col-sm-3 text-center">
+            <span class="iconWrapper"><i class="far fa-calendar-alt fa-lg"></i></span>
+            <div class="rank_icon"><span>3위</span></div>
+            {{month_3}}월
         </div>
     </div>
 
