--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,9 @@
 <nav class="navbar navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a href="{% url 'index:search'%}">꿀트렌드</a>
+            <div class="navbar-header">
+            <a href="{% url 'index:search'%}"><img src="media/logo.png" width="230rem"></a>
         </div>
+    <div class="container">
+
         <div class="nav_menu">
             <a href="{% url 'index:ranking'%}">랭킹</a>
         </div>
