--- a/static/data.css
+++ b/static/data.css
@@ -5,8 +5,18 @@ html {
 body {
     background-color: #F3F3F3;
     width:100%;
-    min-height: 100%;
+    height: 100%;
+    margin:0;
+    padding:0;
+    display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
+
+.container {
+  flex: 1;
+}
+
 @font-face{
  font-family : 'Godo';
  font-style : normal;
@@ -23,7 +33,6 @@ body {
 }
 
 .nav_menu{
-  align-items: center;
   display: flex;
   float : left;
 }
@@ -38,9 +47,9 @@ h2{
 }
 
 .navbar-header{
-  align-items: center;
-  display: flex;
   float : left;
+  line-height: 100px;
+  text-align:center;
 }
 
 .result-navbar{
@@ -87,6 +96,14 @@ a{
   color:gray;
 
 }
+
+.rank_icon{
+  line-height: 15px;
+  display: inline-block;
+  color: rgb(154, 154, 154);
+  font-size : 1.4rem;
+  padding-right:25px;
+}
 @media (max-width: 600px)
 .month_data {
   flex-direction: column;
@@ -96,7 +113,6 @@ a{
     width: 5.5rem;
     height: 5.5rem;
     border-radius: 50%;
-    margin-right : 5px;
     background-color: rgb(247, 247, 247);
     align-items: center;
     justify-content: center;
@@ -112,7 +128,7 @@ a{
   box-shadow: rgb(0 0 0 / 12%) 0px 0.2rem 0.3rem 0px;
   background-color : #fff;
   margin : 0 15px 2rem 15px;
-  font-size : 20px;
+  font-size : 1.5rem;
 }
 
 .month_graph{
@@ -171,7 +187,9 @@ td{
 
 
 .footer_box{
-  margin:0 auto; text-align:center;
+  position:absolute;
+  margin:0 auto;
+  text-align:center;
   width:100%;
   height:auto;
   background:black;
