--- a/static/search.css
+++ b/static/search.css
@@ -1,7 +1,6 @@
 @font-face
 body {
-   background: white;
-
+   background: black;
 }
 
 .page{
@@ -11,34 +10,34 @@ body {
 }
 
 .navbar{
-  min-height: 70px;
-  background-color : #fff;
+  height: 70px;
+  background-color : black;
+  color : white;
   border: none;
   box-shadow: 0 .15rem 1.75rem 0 rgba(33,40,50,.15)
 }
 
-navbar-header{
-    font-family:arial;
-}
 
 a{
+  color : white;
   text-decoration-line:none;
-   padding: 30px 39px;
+   padding: 13px 39px;
    align-items: center;
-    display: flex;
+   display: flex;
 }
 
 .header{
+   height:80%;
    position: relative;
    background-color: #343a40;
    background-size: cover;
-   padding-top: 200px;
-   padding-bottom: 400px;
+   padding-top: 120px;
+   padding-bottom: 200px;
 }
 
 .page{
    position: absolute;
-   top: 30%;
+   top: 20%;
    left : 30%;
    width: 40vw;
    z-index : 10;
@@ -131,11 +130,21 @@ h1 {
   border-left: none; /* Prevent double borders */
   cursor: pointer;
 }
+.footer_box{
+  margin:0 auto; text-align:center;
+  width:100%;
+  height:120px;
+  background:black;
+  color: white;
+  padding: 1.1em 0;
 
-#submit:hover {
 }
 
-
+.footer_header{
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin-bottom: 1em;
+}
 
 /** custom normalize.css */
 *,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0;}article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,video{display:inline-block}audio:not([controls]){display:none;height:0}[hidden],template{display:none}html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}a{background:0 0}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{font-size:2em;margin:.67em 0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}dfn{font-style:italic}hr{height:0}mark{background:#ff0;color:#000}code,kbd,pre,samp{font-family:monospace,serif;font-size:1em}pre{white-space:pre-wrap}q{quotes:"\201C" "\201D" "\2018" "\2019"}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:0}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0}button,input{line-height:normal}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}input[type=checkbox],input[type=radio]{padding:0}input[type=search]{-webkit-appearance:textfield;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}
