--- a/templates/index/search.html
+++ b/templates/index/search.html
@@ -11,10 +11,8 @@
 {% block content %}
 <!--상단 nav-->
 <nav class="navbar navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a href="{% url 'index:search'%}">꿀트렌드</a>
-        </div>
+    <div class="navbar-header">
+        <a href="{% url 'index:search'%}"><img src="media/logo.png" width="230rem"></a>
     </div>
 </nav>
 
@@ -34,6 +32,13 @@
 </header>
 
 </body>
+
+<footer>
+    <div class="footer_box">
+        <p class="footer_header">I'm Trend</p>
+        <p>Copyrightⓒ 2021. 아기돼지삼형제. All rights reserved.</p>
+    </div>
+</footer>
 {% endblock %}
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
 
@@ -47,6 +52,7 @@ $(document).ready(function(){
         $("#searchForm").submit();
     });
 });
+
 
 </script>
 {% endblock %}
