logo, data.html

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-fixed-top">
             <div class="navbar-header">
-            <a href="{% url 'index:search'%}"><img src="media/logo.png" width="230rem"></a>
+            <a href="{% url 'index:search'%}"><img src="media/logo.png" width="210rem";></a>
         </div>
     <div class="container">
 
